--- a/app/snackbar-loading-example.html
+++ b/app/snackbar-loading-example.html
@@ -10,13 +10,10 @@
 
 </style>
 
+<div *ngFor="let icon of icons">
+  <mat-icon>{{icon}}</mat-icon>
+</div>
 
-<mat-icon class="loading-spin">autorenew</mat-icon>
-<!-- <mat-icon class="loading-spin">autorenew</mat-icon>
-<mat-icon class="loading-spin">autorenew</mat-icon>
-<mat-icon class="loading-spin">autorenew</mat-icon>
-<mat-icon class="loading-spin">autorenew</mat-icon>
-<mat-icon class="loading-spin">autorenew</mat-icon> -->
 
 <br>
 
