--- a/app/snackbar-loading-component.html
+++ b/app/snackbar-loading-component.html
@@ -21,7 +21,7 @@
 </mat-grid-list>
 
 <!-- <h4>selected spinner: {{}}</h4> -->
-<div class="message-input">
+<div class="message-input" hidden> 
   <form>
     <mat-form-field class="example-full-width">
     <input 
