--- a/app/snackbar-loading-component.html
+++ b/app/snackbar-loading-component.html
@@ -40,12 +40,12 @@
 <button style="margin-top: 20px; margin-left: 3vw" mat-button mat-raised-button color="accent" (click)="openLoadingSnackBar()">Show loading-bar</button>
 <div class="toggle-buttons">
 
-  <h2>Direction:</h2>
+  <!-- <h2>Direction:</h2>
 <mat-button-toggle-group (change)="onToggleChange($event)" name="fontStyle" aria-label="Font Style">
   <mat-button-toggle value="loading-spin-clockwise">Clock wise</mat-button-toggle>
-  <mat-button-toggle value="loading-spin-clockwise">Anti Clock Wise</mat-button-toggle>
+  <mat-button-toggle value="loading-spin-anti-clockwise">Anti Clock Wise</mat-button-toggle>
 </mat-button-toggle-group>
-</div>
+</div> -->
 
 <!-- Copyright 2019 Google Inc. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
