--- a/app/snackbar-loading-component.html
+++ b/app/snackbar-loading-component.html
@@ -35,9 +35,12 @@
   </form>
 </div>
 
-<button style="margin-top: 0vh" mat-button mat-raised-button color="primary" (click)="openNormalSnackBar()">Show normal-bar</button>
+<button style="margin-top: 0vh" mat-button mat-raised-button color="primary" (click)="openNormalSnackBar()">Show normal snackbar</button>
 
-<button style="margin-top: 20px; margin-left: 3vw" mat-button mat-raised-button color="accent" (click)="openLoadingSnackBar()">Show loading-bar</button>
+<button style="margin-top: 20px; margin-left: 3vw" mat-button mat-raised-button color="accent" (click)="openLoadingSnackBar()">Show loading snackbar</button>
+<div class="toggle-buttons">
+
+  <button style="margin-top: 20px; margin-left: 3vw" mat-button mat-raised-button color="accent" (click)="openLoadingSnackBar()">Show loading snackbar</button>
 <div class="toggle-buttons">
 
   <h2>Direction:</h2>
