--- a/app/snackbar-loading-component.html
+++ b/app/snackbar-loading-component.html
@@ -38,11 +38,11 @@
 
   
 <div>
-<button style="margin-top: 0vh" mat-button mat-raised-button color="primary" (click)="openNormalSnackBar()">Show normal snackbar</button>
+<button style="margin-top: 0vh" mat-button mat-raised-button color="primary" (click)="openNormalSnackBar()">Normal</button>
 
-<button style="margin-top: 20px; margin-left: 3vw" mat-button mat-raised-button color="accent" (click)="openLoadingSnackBar()">Show loading snackbar</button>
+<button style="margin-top: 20px; margin-left: 3vw" mat-button mat-raised-button color="accent" (click)="openLoadingSnackBar()">Loading</button>
 
-  <button style="margin-top: 20px; margin-left: 3vw" mat-button mat-raised-button color="basic" (click)="closeLoadingSnackBar()">Dismiss Loading snackbar</button>
+  <button style="margin-top: 20px; margin-left: 3vw" mat-button mat-raised-button color="basic" (click)="closeLoadingSnackBar()">Dismiss</button>
 </div>
 
 
