--- a/app/snackbar-loading-component.html
+++ b/app/snackbar-loading-component.html
@@ -54,7 +54,7 @@
     <mat-button-toggle value="loading-spin-anti-clockwise">Anti Clock Wise</mat-button-toggle>
   </mat-button-toggle-group>
 </div>
-<div style="position: absolute;bottom:0">
+<div style="position: absolute;bottom:0;right:0">
     <small>Angular Mateial demo by: </small> <a href="cliff-crerar.tech">Cliff Crerar</a>
 </div>
 </main>
